--- a/css/input-components/_bInput.scss
+++ b/css/input-components/_bInput.scss
@@ -136,6 +136,7 @@
       padding: 0;
       &::before {
         transform: scale(1.2);
+        margin: 0;
       }
     }
   }
